force-app/main/default/objects/Employee_Information__c/Employee_Information__c.object-meta.xml
<CustomObject>
    <label>Employee Information</label>
    <nameField>
        <label>Employee Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>