force-app/main/default/objects/Employee_Information__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Employee Email Address</description>
    <label>Email</label>
    <length>55</length>
    <type>Text</type>
</CustomField>