force-app/main/default/objects/Employee_Information__c/fields/Employee_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_3__c</fullName>
    <label>Employee ID 3</label>
    <length>55</length>
    <type>Text</type>
</CustomField>