force-app/main/default/objects/Employee_Information__c/fields/Gas_Prices__c.field-meta.xml
<CustomField>
    <fullName>Gas_Prices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gas Prices</label>
    <referenceTo>Gas_Prices__c</referenceTo>
    <relationshipLabel>Employees Information</relationshipLabel>
    <relationshipName>Employees_Information_to_Gas_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>