force-app/main/default/objects/Employee_Information__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Change me to a look up field</description>
    <inlineHelpText>Change me to a look up field</inlineHelpText>
    <label>Manager</label>
    <length>55</length>
    <type>Text</type>
</CustomField>