force-app/main/default/objects/Employee_Information__c/fields/Managers_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email_Address__c</fullName>
    <label>Managers Email Address</label>
    <length>55</length>
    <type>Text</type>
</CustomField>