force-app/main/default/objects/Employee_Information__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Employees Information</relationshipLabel>
    <relationshipName>Employees_Information</relationshipName>
    <type>Lookup</type>
</CustomField>