force-app/main/default/objects/Employee_Information__c/fields/Standard_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Standard_Vehicle_Type__c</fullName>
    <description>Standard vehicle generating the reimbursement</description>
    <inlineHelpText>Standard vehicle generating the reimbursement</inlineHelpText>
    <label>Standard Vehicle Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>