force-app/main/default/objects/Employee_Information__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Employees garaging point</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>